replace plugins with jquery ui generated plugin, add resize event, add init/destroy function

--- a/assets/src/sass/_layout.scss
+++ b/assets/src/sass/_layout.scss
@@ -20,6 +20,16 @@ main {
 	@include clearfix;
 }
 
+.accordion--desktop {
+	h3 {
+		line-height: 2.5;
+		margin: 0;
+	}
+	p {
+		&:first-child { margin-top: 0; }
+		&:last-child { margin-bottom: 0; }
+	}
+}
 
 /* =======================================================================
 Header
